--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4514,6 +4514,7 @@ input[type="submit"].btn.btn-mini {
   float: left;
   margin-top: 5px;
   margin-bottom: 0;
+  margin-right: 5px;
 }
 
 .navbar-search .search-query {
