--- a/views/layout/navbar.html
+++ b/views/layout/navbar.html
@@ -1,6 +1,7 @@
 <div class="span3">
 	<div class="well" style="padding: 8px 0;">
 		<ul class="nav nav-list">
+			<li class="nav-header">Główne opcje</li>
 			<li><a href="#">Action1</a></li>
 			<li class="active"><a href="#">Action2</a></li>
 			<li><a href="#">Action3</a></li>
@@ -8,7 +9,7 @@
 			<li class="nav-header">Inne opcje</li>
 			<li><a href="#">Action4</a></li>
 			<li class="divider"></li>
-			<li><a href="#">Pomoc</a></li>
+			<li><a href="#"><i class="icon-info-sign"></i> Pomoc</a></li>
 		</ul>
 	</div>
 </div>
