--- a/views/layout/top.html
+++ b/views/layout/top.html
@@ -1,12 +1,12 @@
 <header>
-	<div class="navbar">
+	<div class="navbar navbar-static-top">
 		<div class="navbar-inner">
 		    <ul class="nav pull-right">
 				<li class="active">
-					<a href="#">Home</a>
+					<a href="#"><i class="icon-home"></i> Home</a>
 				</li>
-				<li><a href="#">Link</a></li>
-	    		<li><a href="#">Logout</a></li>
+				<li><a href="#"><i class="icon-wrench"></i> Ustawienia</a></li>
+	    		<li><a href="login.php"><i class="icon-off"></i> Wyloguj</a></li>
 	    	</ul>
 	    	<form class="navbar-search pull-right">
     			<input type="text" class="search-query" placeholder="Search">
