Mechanizm logowania, wylogowywania, zmienne sesyjne

--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -5,6 +5,6 @@
 		<title>
 			Project by MN and ŁS
 		</title>
-		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" media="screen">
 	</head>
 	<body>
