--- a/views/layout/top.html
+++ b/views/layout/top.html
@@ -6,7 +6,7 @@
 					<a href="#"><i class="icon-home"></i> Home</a>
 				</li>
 				<li><a href="#"><i class="icon-wrench"></i> Ustawienia</a></li>
-	    		<li><a href="login.php"><i class="icon-off"></i> Wyloguj</a></li>
+	    		<li><a href="logout.php"><i class="icon-off"></i> Wyloguj</a></li>
 	    	</ul>
 	    	<form class="navbar-search pull-right">
     			<input type="text" class="search-query" placeholder="Search">
